# TwitchBot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: BotCore.cpp  BotCore.hpp  Callback.hpp  FeedCommand.cpp  FeedCommand.hpp  IBotCore.hpp  IRCClinet.cpp  IRCClinet.hpp  MessageContext.hpp  UserInfo.cpp  UserInfo.hpp  Utils.hpp  main.cpp
src/commands/: BanJokeCommand.hpp  FeedCommand.cpp  FeedCommand.hpp  ICommand.hpp
